--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ flake8-docstrings = "^1.7.0"
 pytest = "^7.2.1"
 pyright = "^1.1.293"
 pytest-cov = "^4.0.0"
+
 pytest-isort = "^3.1.0"
+q2-types-variant = "0.1.8"
 
 [tool.pyright]
 exclude = ["*nox"]
